--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,6 @@
       
         <input type=submit value=Submit>
    </form>
-    My prediction has changed again: {{ predict }}
+    My final prediction: {{ predict }}
 </body>
 </html>
